[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }
enigo = "0.3.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
    "debug",
    "winit",
    "tokio",
    "xdg-portal",
    "dbus-config",
    "a11y",
    "wayland",
    "wgpu",
    "single-instance",
    "multi-window",
    "serde-keycode"
]

[build-dependencies]
